--- a/0007-with-chat-gpt/index.html
+++ b/0007-with-chat-gpt/index.html
@@ -6,13 +6,14 @@
         <title>Interactive Webpage</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body id="forBody">
         <header>
             <h1>Welcome to My Interactive Webpage</h1>
             <p>Click the button to change the background color</p>
         </header>
         <main>
             <button id="colorButton">Change Background Color</button>
+            <button onclick="colorButton()">Change Background Color</button>
         </main>
         <footer>
             <p>Created by You!</p>
